# wingpanel-indicator-airpods

./: .gitignore  README.md  meson.build
.github/workflows/: main.yml
data/: com.github.casasfernando.wingpanel-indicator-airpods.appdata.xml.in  com.github.casasfernando.wingpanel-indicator-airpods.desktop.in  com.github.casasfernando.wingpanel-indicator-airpods.gresource.xml  com.github.casasfernando.wingpanel-indicator-airpods.gschema.xml
data/icons/: icons.indicator.gresource.xml
debian/: changelog  control  copyright  rules
po/: POTFILES  com.github.casasfernando.wingpanel-indicator-airpods.pot  de.po  es.po  fr.po  it.po  meson.build  nl.po  pl.po  pt.po
po/extra/: POTFILES  de.po  es.po  extra.pot  fr.po  it.po  nl.po  pl.po  pt.po
src/: Application.vala  Indicator.vala  MainWindow.vala  meson.build
src/Services/: Adapter.vala  Airpods.vala  AirpodsService.vala  Battery.vala  Bluez.vala  Dbus.vala  Device.vala  Manager.vala  Mpris.vala  Properties.vala
src/Widgets/: ComboRow.vala  DisplayWidget.vala  IndicatorWidget.vala  PopoverWidget.vala  PopoverWidgetRowIconic.vala  SpinRow.vala  Toggles.vala
