executable_sources = files (
    'Application.vala',
    'MainWindow.vala',

    'Widgets/ComboRow.vala',
    'Widgets/SpinRow.vala',
    'Widgets/Toggles.vala'
)

indicator_sources = files (
    'Indicator.vala',

    'Services/Airpods.vala',
    'Services/Bluez.vala',
    'Services/Dbus.vala',
    'Services/Mpris.vala',
    'Services/Upower.vala',

    'Widgets/DisplayWidget.vala',
    'Widgets/IndicatorWidget.vala',
    'Widgets/PopoverWidget.vala',
    'Widgets/PopoverWidgetRowIconic.vala'
)
